# anki-fractional-scheduler

./: .gitignore  CHANGELOG.md  Makefile  PLAN.md  README.md  ROADMAP.md  TODO.md  pyproject.toml
addon/: __init__.py  api.py  apply.py  config.json  config.py  manifest.json  meta.json  notify.py  notify_status.py  schedule.py  ui.py
docs/: missed-day-balancing-ideas.md  scheduling-strategies.md  strategy-plan.md
release/: ankiweb.md  github-release.md
tests/: test_config.py  test_repo_hygiene.py  test_schedule.py  test_sync_hooks.py
tests/gui_smoke/probe_addon/: __init__.py
