[project]
name = "anki-fractional-scheduler"
version = "0.1.0"
description = "Anki add-on for fractional new-card scheduling and deck health badges."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.13.0",
  "ruff>=0.6.0",
]

[tool.uv]
exclude-newer = "7 days"
package = false

[tool.uv.pip]
exclude-newer = "7 days"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
follow_imports = "skip"
check_untyped_defs = false
