[project]
name = "anki-fractional-scheduler"
version = "0.4.1"
description = "Anki add-on for fractional new-card scheduling and deck health badges."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.13.0",
  "ruff>=0.6.0",
]

[tool.uv]
exclude-newer = "7 days"
package = false

[tool.uv.pip]
exclude-newer = "7 days"

[tool.anki-addon-release]
source_dir = "addon"
manifest = "addon/manifest.json"
artifact_dir = "dist"
artifact_name = "fractional-new-card-scheduler.ankiaddon"
include = ["__init__.py", "*.py", "manifest.json", "config.json"]

[tool.anki-addon-release.ankiweb]
addon_id = "304166926"
listing_file = "release/ankiweb.md"
changelog_file = "CHANGELOG.md"
login_email_env = "ANKIWEB_EMAIL"
login_password_env = "ANKIWEB_PASSWORD"

[tool.anki-addon-workbench]
project_name = "Anki Fractional Scheduler"
addon_package = "fractional_scheduler"
source_root = "addon"
include = ["__init__.py", "*.py", "manifest.json", "config.json"]
probe_addon = "tests/gui_smoke/probe_addon"
probe_package = "zz_fractional_scheduler_probe"
anki_version = "25.09"
profile = "User 1"
docker_image = "fractional-scheduler-anki-gui"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
follow_imports = "skip"
check_untyped_defs = false
